--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@heroicons/react": "^2.2.0",
     "autoprefixer": "^10.4.12",
     "clsx": "^2.1.0",
+    "leaflet": "^1.9.4",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
